--- a/content/blogs/IMDB.Rmd
+++ b/content/blogs/IMDB.Rmd
@@ -2,7 +2,7 @@
 title: "Pay Discrimination"
 description: 
 date: '2017-10-31T22:26:09-05:00'
-image: 
+image: pay gap.jpg
 keywords: ''
 slug: xyz
 draft: no
