--- a/content/blogs/homework3_Final.Rmd
+++ b/content/blogs/homework3_Final.Rmd
@@ -1,9 +1,9 @@
 ---
 title: "Youth Risk Behavior Surveillance"
 date: '2017-10-31T22:26:09-05:00'
-description: Lorem Etiam Nullam
+description: 
 draft: no
-image: 
+image: youth.jpg
 keywords: ''
 slug: magna
 categories:
