--- a/content/blogs/IMDB.Rmd
+++ b/content/blogs/IMDB.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Pay Discrimination"
+title: "Omega Group plc- Pay Discrimination"
 description: 
 date: '2017-10-31T22:26:09-05:00'
 image: pay gap.jpg
@@ -42,9 +42,6 @@ library(openintro)
 ```
 
 
-
-
-# Omega Group plc- Pay Discrimination
 
 At the last board meeting of Omega Group Plc., the headquarters of a large multinational company, the issue was raised that women were being discriminated in the company, in the sense that the salaries were not the same for male and female executives. A quick analysis of a sample of 50 employees (of which 24 men and 26 women) revealed that the average salary for men was about 8,700 higher than for women. This seemed like a considerable difference, so it was decided that a further analysis of the company salaries was warranted.
 
